--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "angular": "^1.6.2",
+    "bootstrap": "^3.3.7",
+    "angular-ui-router": "^0.4.2"
   }
 }
