--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.14.1",
     "body-parser": "^1.15.2",
+    "csvjson": "^4.1.2",
     "mysql": "^2.11.1"
   }
 }
