--- a/server/config.json
+++ b/server/config.json
@@ -2,6 +2,6 @@
   "host": "localhost",
   "db_user": "root",
   "db_password": "",
-  "db_name": "shops-online",
+  "db_name": "shops_online",
   "port": "3000"
 }
