--- a/server/config.json
+++ b/server/config.json
@@ -1,7 +1,8 @@
 {
   "host": "localhost",
+  "mysql_port": "3307",
   "db_user": "root",
   "db_password": "",
   "db_name": "shops_online",
-  "port": "3000"
+  "app_port": "3000"
 }
